tests/build/cases/widget_new/incorrect_arg_type4.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
 --> cases/widget_new/incorrect_arg_type4.rs:9:20
  |
9 |             stops: true
  |             -----  ^^^^ the trait `IntoVar<GradientStops>` is not implemented for `bool`
  |             |
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `background_gradient_inputs__::stops`
 --> $WORKSPACE/zero-ui/src/properties/visual.rs
  |
  | pub fn background_gradient(child: impl UiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> impl UiNode {
  |                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `background_gradient_inputs__::stops`
